--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: valoralo_mx_rails_development
+  database: smsforall_rails_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: valoralo_mx_rails
+  #username: smsforall_rails
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: valoralo_mx_rails_test
+  database: smsforall_rails_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: valoralo_mx_rails_production
-  username: valoralo_mx_rails
-  password: <%= ENV['VALORALO_MX_RAILS_DATABASE_PASSWORD'] %>
+  database: smsforall_rails_production
+  username: smsforall_rails
+  password: <%= ENV['smsforall_RAILS_DATABASE_PASSWORD'] %>
