--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "esbuild": "^0.17.19",
     "jquery": "^3.6.0",
     "jquery.easing": "^1.4.1",
+    "stimulus": "^3.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
